force-app/main/default/objects/CEL_Campaign_Feedback__c/CEL_Campaign_Feedback__c.object-meta.xml
<CustomObject>
    <label>Campaign Feedback</label>
    <nameField>
        <label>Campaign Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>