force-app/main/default/objects/CEL_Campaign_Feedback__c/fields/cel_account_id__c.field-meta.xml
<CustomField>
    <fullName>cel_account_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns Feedback (Customer)</relationshipLabel>
    <relationshipName>Campaigns_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>