force-app/main/default/objects/CEL_Campaign_Feedback__c/fields/cel_campaign_id__c.field-meta.xml
<CustomField>
    <fullName>cel_campaign_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaigns Feedback</relationshipLabel>
    <relationshipName>Campaigns_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>