force-app/main/default/objects/CEL_Campaign_Feedback__c/fields/cel_click_time__c.field-meta.xml
<CustomField>
    <fullName>cel_click_time__c</fullName>
    <label>Click Time</label>
    <type>DateTime</type>
</CustomField>