force-app/main/default/objects/CEL_Campaign_Feedback__c/fields/cel_ext_pk_id__c.field-meta.xml
<CustomField>
    <fullName>cel_ext_pk_id__c</fullName>
    <externalId>true</externalId>
    <label>Pk_id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>