force-app/main/default/objects/CEL_Campaign_Feedback__c/fields/cel_feedback_type__c.field-meta.xml
<CustomField>
    <fullName>cel_feedback_type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Click</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>