force-app/main/default/objects/CEL_Campaign_Feedback__c/fields/cel_link_id__c.field-meta.xml
<CustomField>
    <fullName>cel_link_id__c</fullName>
    <label>Link ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>