force-app/main/default/objects/CEL_Campaign_Feedback__c/fields/cel_link_name__c.field-meta.xml
<CustomField>
    <fullName>cel_link_name__c</fullName>
    <label>Link Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>